--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google Search -->
-    <meta
-      name="google-site-verification"
-      content="WBTkUC8mZXiR20VyMOiH6C2M8vE58tMLgKSKoXj-oIM"
-    />
+    <meta name="google-site-verification" content="DL3ugLnX7AcaT_TDGODf_0cV3j9tSM1lLx4Wxerbzh0" />
 
     <!-- SEO -->
     <title>RiseUply — Reja, o‘rganish, kuzatish</title>
